--- a/style.css
+++ b/style.css
@@ -8,14 +8,17 @@ body {
 h1 {
     color:rgb(0, 0, 0);
     text-align: center;
+    font-family: Arial, Helvetica, sans-serif
 }
 
 h2 {
     margin-top: 50px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 p {
     line-height: 1.3;
+    font-family: Arial, Helvetica, sans-serif;
 
 }
 
@@ -46,4 +49,27 @@ a:hover {
     margin-left: -30px;
     margin-right: -30px;
     margin-top: -30px;
+}
+
+a.button {
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    background-color: rgb(47, 197, 67);
+    color: black;
+    padding: 10px 15px;
+    border-radius: 10px;
+    margin-top: 10px;
+    text-decoration: none;
+}
+
+a.button:hover {
+    background-color: green;
+}
+
+.container {
+    max-width: 800px;
+    margin:auto;
+    background-color: rgb(51, 215, 73);
+    padding: 20px;
+    border-radius: 10px;
 }
