--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     background-color: aliceblue;
     font-family: Arial, Helvetica, sans-serif
-    margin: 10;
+    margin: 10px;
     padding: 20px;
 }
 
@@ -72,4 +72,38 @@ a.button:hover {
     background-color: rgb(51, 215, 73);
     padding: 20px;
     border-radius: 10px;
+}
+
+.navbar {
+    background-color: rgb(47, 197, 67);
+    padding: 10px;
+    box-shadow: 100px;
+    margin-top: 20px;
+    border-radius: 10px;
+}
+
+.navbar ul {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 5px;
+    padding: 5px;
+}
+
+.navbar li {
+    margin: 10px;
+}
+
+.navbar a{
+    color: black;
+    text-decoration: solid;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    
+}
+
+.navbar a:hover, 
+.navbar a:active {
+    text-decoration: underline;
+    color: rgb(0, 64, 0);
 }
