--- a/style.css
+++ b/style.css
@@ -18,8 +18,7 @@ h2 {
 
 p {
     line-height: 1.3;
-    font-family: Arial, Helvetica, sans-serif;
-
+    font-family: Arial, Helvetica, sans-serif
 }
 
 ul {
@@ -41,14 +40,20 @@ a:hover {
 }
 
 .info-box {
-    background-color: rgb(93, 216, 76);
+    background-color: rgb(51, 215, 73);
     padding: 20px;
-    border-radius: 0px;
+    border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     margin: 20px;
-    margin-left: -30px;
-    margin-right: -30px;
-    margin-top: -30px;
+    margin-left: -0px;
+    margin-right: -0px;
+    margin-top: -0px;
+    
+
+}
+
+.info-box p {
+    text-align: center;
 }
 
 a.button {
@@ -67,15 +72,16 @@ a.button:hover {
 }
 
 .container {
-    max-width: 800px;
-    margin:auto;
+    width: auto;
+    margin: 30px auto 0 auto;
     background-color: rgb(51, 215, 73);
     padding: 20px;
     border-radius: 10px;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .navbar {
-    background-color: rgb(47, 197, 67);
+    background-color: rgb(51, 215, 73);
     padding: 10px;
     box-shadow: 100px;
     margin-top: 20px;
@@ -106,4 +112,8 @@ a.button:hover {
 .navbar a:active {
     text-decoration: underline;
     color: rgb(0, 64, 0);
+}
+
+.navbar-container {
+    width: auto;
 }
