--- a/style.css
+++ b/style.css
@@ -81,7 +81,7 @@ a.button:hover {
 }
 
 .navbar {
-    background-color: rgb(51, 215, 73);
+    background-color: rgb(255, 105, 105);
     padding: 10px;
     box-shadow: 100px;
     margin-top: 20px;
@@ -116,4 +116,31 @@ a.button:hover {
 
 .navbar-container {
     width: auto;
+}
+
+.site-footer {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    margin-top: 40px;
+    background-color: rgb(255, 105, 105);
+    padding: 20px 40px;
+    border-top: 4px solid green;
+    font-family: Arial, Helvetica, sans-serif;
+}
+ 
+.footer-left, .footer-right {
+    flex: 1;
+    min-width: 200px;
+    margin: 10px;  
+}
+
+.site-footer a {
+    color: rgb(89, 0, 0);
+    text-decoration: none;
+}
+
+.site-footer a:hover {
+    text-decoration: underline;
 }
