--- a/style.css
+++ b/style.css
@@ -56,6 +56,13 @@ a:hover {
     text-align: center;
 }
 
+.logo {
+    max-width: 120px;
+    height: auto;
+    display: block;
+    margin: 0 auto 10px auto;
+}
+
 a.button {
     font-family: Arial, Helvetica, sans-serif;
     display: inline-block;
